--- a/Gazi.HelloWindowsAppBLG/Gazi.HelloWindowsAppBLG.csproj
+++ b/Gazi.HelloWindowsAppBLG/Gazi.HelloWindowsAppBLG.csproj
@@ -127,5 +127,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GameLib\GameLib.csproj">
+      <Project>{ab81c99f-f350-4583-b57c-99727727f62e}</Project>
+      <Name>GameLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
